--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -36,29 +36,37 @@
             <a href="{{ path('cms_core.node_new', {'siteId':site.id, 'contentTypeId':contentType.id}) }}" id="add-new"><i class="icon-plus-sign"></i> Add New</a>
         </div>
         <div class="span4 pull-right" id="search-container">
-            <input type="search" id="search" class="span2 pull-right" placeholder="Search for {{ contentType.name | title }} "/>
+            <form class="load-data-form">
+                <input type="search" id="search" class="span2 pull-right" value="{{ search }}" placeholder="Search"/>
+            </form>
         </div>
     </div>
     <div class="row-fluid">
         <div class="span2">
-            <select name="state" value="state" class="select-block span2">
-                <option value="0">View All States</option>
-                <option value="draft">Drafts</option>
-                <option value="active">Published</option>
-                <option value="scheduled">Scheduled</option>
+            <select name="state"  class="select-block span2" id='input-state'>
+                <option value="">View All States</option>
+                <option value="draft" {% if state == 'draft' %}selected{% endif %}>Drafts</option>
+                <option value="active" {% if state == 'active' %}selected{% endif %}>Published</option>
+                <option value="scheduled" {% if state == 'scheduled' %}selected{% endif %}>Scheduled</option>
             </select>
         </div>
         <div class="span2">
             <button class="btn btn-info span12 flatui-calendar">
-                <span class="pull-left flatui-calendar-text">View All Dates</span>
+                <span class="pull-left flatui-calendar-text">
+                    {% if startDate or endDate %}
+                        Change Dates
+                    {% else %}
+                        View All Dates
+                    {% endif %}
+                </span>
                 <span class="caret pull-right"></span>
             </button>
             <div class="row-fluid hide" id='flatui-calendar-input-container'>
                 <div class="span12">
                     <label for="start-date" class="date-input-label">From:</label>
-                    <input type="text" class="flatui-calendar-input-start date-input span12" id='start-date'/>
+                    <input type="text" class="flatui-calendar-input-start date-input span12" id='start-date' value="{% if startDate %}{{ startDate|date('m/d/Y') }}{% endif %}"/>
                     <label for="end-date" class="date-input-label">To:</label>
-                    <input type="text" class="flatui-calendar-input-end date-input span12" id='end-date'/>
+                    <input type="text" class="flatui-calendar-input-end date-input span12" id='end-date' value="{% if endDate %}{{ endDate|date('m/d/Y') }}{% endif %}"/>
                     <div class="row-fluid" id="flatui-calendar-input-button-container">
                             <button class="btn span6" id="flatui-calendar-cancel-dates">clear</button>
                         <button class="btn btn-info span6" id='flatui-calendar-confirm-dates'>ok</button>
@@ -68,15 +76,21 @@
         </div>
         <div class="span2">
             <button class="btn btn-info span12" id='category-opener'>
-                <span class="pull-left" id='category-opener-text'>View Categories</span>
+                <span class="pull-left" id='category-opener-text'>
+                    {% if categoryParent or categorySub %}
+                        Change Category
+                    {% else %}
+                        View Category
+                    {% endif %}
+                </span>
                 <span class="caret pull-right"></span>
             </button>
             <div class="row-fluid hide" id="category-container">
                 <div class="span12">
                     <label for="category-parent">Parent:</label>
-                    <input type="text" class="span12" id="category-parent"/>
+                    <input type="text" class="span12" id="category-parent" value="{{ categoryParent|default() }}"/>
                     <label for="category-sub">Sub:</label>
-                    <input type="text" class="span12" id="category-sub"/>
+                    <input type="text" class="span12" id="category-sub" value="{{ categorySub|default() }}"/>
                     <div class="row-fluid" id="category-button-container">
                         <button class="btn span6" id="category-cancel">clear</button>
                         <button class="btn btn-info span6" id='category-confirm'>ok</button>
@@ -86,13 +100,19 @@
         </div>
         <div class="span2">
             <button class="btn btn-info span12" id='tag-opener'>
-                <span class="pull-left" id='tag-opener-text'>View All Tags</span>
+                <span class="pull-left" id='tag-opener-text'>
+                    {% if tags %}
+                        Change Tags
+                    {% else %}
+                        View All Tags
+                    {% endif %}
+                </span>
                 <span class="caret pull-right"></span>
             </button>
             <div class="row-fluid hide" id="tag-container">
                 <div class="span12">
                     <label for="tags">Tags:</label>
-                    <input type="text"  class="span12" name='tags' id="tags" />
+                    <input type="text"  class="span12" name='tags' id="tags" value="{{ tags|default() }}" />
                     <div class="row-fluid" id="tag-button-container">
                         <button class="btn span6" id="tag-cancel">clear</button>
                         <button class="btn btn-info span6" id='tag-confirm'>ok</button>
@@ -102,15 +122,21 @@
         </div>
         <div class="span2">
             <button class="btn btn-info span12" id='author-opener'>
-                <span class="pull-left" id='author-opener-text'>View All Authors</span>
+                <span class="pull-left" id='author-opener-text'>
+                    {% if authorFirstName or authorLastName %}
+                        Change Author
+                    {% else %}
+                        View All Authors
+                    {% endif %}
+                </span>
                 <span class="caret pull-right"></span>
             </button>
             <div class="row-fluid hide" id="author-container">
                 <div class="span12">
                     <label for="author-first-name">First Name:</label>
-                    <input type="text" class="span12" id="author-first-name"/>
+                    <input type="text" class="span12" id="author-first-name" value="{{ authorFirstName|title|default() }}"/>
                     <label for="author-last-name">Last Name:</label>
-                    <input type="text" class="span12" id="author-last-name"/>
+                    <input type="text" class="span12" id="author-last-name" value="{{ authorLastName|title|default() }}"/>
                     <div class="row-fluid" id="author-input-button-container">
                         <button class="btn span6" id="author-cancel">clear</button>
                         <button class="btn btn-info span6" id='author-confirm'>ok</button>
@@ -119,7 +145,7 @@
             </div>
         </div>
         <div class="span2">
-            <button class="btn btn-info btn-block"><i class="icon-filter"></i> Filter</button>
+            <button class="btn btn-info btn-block load-data"><i class="icon-filter"></i> Filter</button>
         </div>
     </div>
     <hr>
@@ -209,5 +235,5 @@
         </div>
     {% endif %}
     <input type="hidden" id="token" value="{{ token }}"/>
-    <input type="hidden" id="baseRoot" value="{{ app.request.baseUrl }}"/>
+    <input type="hidden" id="page" value="{{ page }}"/>
 {% endblock %}
